--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
+body{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+  /* background-color: rgba(0, 0, 0, 0.3); */
+  background-color: white;
+  color: #06a3e3;
+  padding: 30px 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.contentp{
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  padding: 30px 20px;
+}
+
+.footer a{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+img{
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.videos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  overflow: hidden;
+}
+
+.video{
+  width: 100%;
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+h3{
+  margin-bottom: 10px;
+}
+
+.caretButton{
+  background-color: rgba(255, 255, 255, 0.3);
+  border: none;
+  color: #06a3e3;;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.caretButton:hover{
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.button{
+  width: 300px;
+  border-radius: 50px;
+  background-color: coral;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.mallButton{
+  gap: 10px;
+}
+
+.messageButton, .mallButton, .joinButton{
+  background-color: rgb(0, 238, 159);
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.messageButton{
+  background-color: transparent;
+  border: 2px solid white;
+  gap: 10px;
+}
+
+.msgr{
+  margin-top: 2px;
+}
+
+.header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0 40px;
+  padding: 0 20px
+}
+.header .button{
+  margin-top: 20px;
+}
+.header a{
+  margin-bottom: 50px;
+}
+
+a{
+  text-decoration: none;
+}
+
+.desc{
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  width: 250px;
+  padding: 0;
+  margin: 0;
+  width: 380px;
+  border-radius: 10px;
+  background-color: #06a3e3;
+  color: white;
+  padding: 10px;
+}
+
+.joinButton{
+  margin: 10px 0;
+}
+
+@media (min-width: 768px){
+  .videos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .contentTwo{
+    margin-top: 30px;
+  }
+  .desc{
+    height: 480px;
+    margin-bottom: 20px;
+    width: 320px;
+    gap: 20px;
+  }
+  
+  .header h1, .content h1{
+    font-size: 40px;
+  }
+
+  .header p, .contentp{
+    font-size: 20px;
   }
 }
