--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@ a{
   padding: 10px;
 }
 
+
 .joinButton{
   margin: 10px 0;
 }
@@ -136,6 +137,7 @@ a{
     flex-direction: row;
     flex-wrap: wrap;
     margin-top: 20px;
+    overflow: visible;
   }
   .contentTwo{
     margin-top: 30px;
@@ -145,6 +147,13 @@ a{
     margin-bottom: 20px;
     width: 320px;
     gap: 20px;
+  }
+
+  .desc:hover{
+    transform: translateY(-20px);
+    transition: all 0.3s ease-in-out;
+    background-color: rgb(0, 238, 159);
+    /* box-shadow: 5px 5px 5px rgb(0, 238, 159); */
   }
   
   .header h1, .content h1{
